Add role to deploy cASO
cASO is an OpenStack accounting extractor. For more detail see:
https://github.com/IFCA/caso

By default, cASO is configured to output to Fluentd via TCP. The
accounting information can then be shipped off to ElasticSearch.

(cherry picked from commit df41ad3d703d8ceee7a086a8b9ebb33bbe8fc5e5)

--- a/ansible/roles/common/templates/conf/filter/00-record_transformer.conf.j2
+++ b/ansible/roles/common/templates/conf/filter/00-record_transformer.conf.j2
@@ -78,3 +78,12 @@
   </record>
 </filter>
 {% endif %}
+
+{% if enable_caso | bool and inventory_hostname in groups['caso'] %}
+<filter apel.events>
+    @type parser
+    format json
+    key_name Payload
+    reserve_data true
+</filter>
+{% endif %}
