--- a/tests/templates/inventory.j2
+++ b/tests/templates/inventory.j2
@@ -669,3 +669,10 @@ storage
 
 [prometheus-elasticsearch-exporter:children]
 elasticsearch
+
+[prometheus-dellhw-exporter:children]
+monitoring
+control
+compute
+network
+storage
