--- a/ansible/roles/manila/templates/manila-share.json.j2
+++ b/ansible/roles/manila/templates/manila-share.json.j2
@@ -8,7 +8,7 @@
             "perm": "0600"
         }{% if enable_manila_backend_cephfs_native | bool or enable_manila_backend_cephfs_nfs | bool %},
         {
-            "source": "{{ container_config_directory }}/ceph.*",
+            "source": "{{ container_config_directory }}/ceph*.*",
             "dest": "/etc/ceph/",
             "owner": "manila",
             "perm": "0600"
